--- a/public/css/app.css
+++ b/public/css/app.css
@@ -502,6 +502,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .m-5 {
   margin: 1.25rem;
 }
+.m-1 {
+  margin: 0.25rem;
+}
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -533,6 +536,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+.-mx-2 {
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
+}
+.-mx-5 {
+  margin-left: -1.25rem;
+  margin-right: -1.25rem;
+}
+.-mx-10 {
+  margin-left: -2.5rem;
+  margin-right: -2.5rem;
+}
+.-mx-4 {
+  margin-left: -1rem;
+  margin-right: -1rem;
 }
 .mb-3 {
   margin-bottom: 0.75rem;
@@ -645,6 +664,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-48 {
   width: 12rem;
 }
+.w-screen {
+  width: 100vw;
+}
 .max-w-md {
   max-width: 28rem;
 }
@@ -656,6 +678,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .max-w-xs {
   max-width: 20rem;
+}
+.max-w-sm {
+  max-width: 24rem;
+}
+.max-w-xl {
+  max-width: 36rem;
 }
 .flex-auto {
   flex: 1 1 auto;
@@ -845,6 +873,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-slate-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+.bg-cyan-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(103 232 249 / var(--tw-bg-opacity));
 }
 .bg-\[url\(\'\/images\/cow3\.png\'\)\] {
   background-image: url('/images/cow3.png');
@@ -1322,6 +1354,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   .sm\:bg-teal-50 {
     --tw-bg-opacity: 1;
     background-color: rgb(240 253 250 / var(--tw-bg-opacity));
+  }
+
+  .sm\:bg-cyan-300 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(103 232 249 / var(--tw-bg-opacity));
   }
 
   .sm\:px-6 {
